# digital-twin-of-an-automated-vision-inspection-and-defect-classification-cell

./: .gitignore  README.md  hello.py  pyproject.toml
assets/: README.md
assets/conveyor/: README.md  proxy_conveyor.usda
assets/inspection_station/: README.md  proxy_inspection_station.usda  proxy_sensor_gate.usda
assets/products/: README.md  proxy_inspection_part.usda
assets/robot/: README.md  proxy_reject_robot.usda
assets/safety/: README.md  proxy_reject_bin.usda
cells/: quality_inspection_cell.usda
configs/: default.json  scenarios.json
docs/: ARCHITECTURE.md  ISAAC_SIM_INTEGRATION.md  PROJECT_CHARTER.md  REQUIREMENTS.md  ROADMAP.md  TEST_PLAN.md
layers/: behavior.usda  layout.usda  lighting.usda  materials.usda  physics.usda
layouts/: factory_layout.usda
scripts/: run_demo.py  run_scenarios.py
scripts/inspection_cell/: __init__.py  cli.py  fault_manager.py  inspection_controller.py  metrics_collector.py  models.py
src/inspection_cell/: config.py  line_controller.py  state_machine.py
src/inspection_cell/adapters/: __init__.py  isaac_sim.py
tests/: test_line_controller.py  test_state_machine.py
