[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inspection-cell-digital-twin"
version = "0.1.0"
description = "Simulator-independent control core for an OpenUSD quality inspection cell"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project Contributors"}]
dependencies = []

[project.scripts]
inspection-cell-demo = "inspection_cell.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

